--- a/2l-oll.html
+++ b/2l-oll.html
@@ -4,9 +4,10 @@
   <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="css/common-min-006.css" />
-    <script type="text/javascript" src="js/common-min-015.js" async></script>
-    <script type="text/javascript" src="data/2l-oll-min-004.js" async></script>
+    <link rel="stylesheet" type="text/css" href="css/common-min-008.css" />
+    <link rel="stylesheet" type="text/css" href="css/2l-oll-min-001.css" />
+    <script type="text/javascript" src="js/common-min-018.js" async></script>
+    <script type="text/javascript" src="data/2l-oll-min-005.js" async></script>
     <title>Loading</title>
   </head>
   <body>
