--- a/2l-2gll.html
+++ b/2l-2gll.html
@@ -11,7 +11,11 @@
   </head>
   <body>
     <div id="view">
-      <p>Javascript must be enabled to view this page!</p>
+      <h2>Hmmm. You may be a victim of the following:</h2>
+      <p>Connection - Poor internet speed causing resources to download too slowly</p>
+      <p>Javascript - Is it enabled in your browser? Javascript is required for this page to work</p>
+      <p>Browser - You need at least IE 9, Chrome 4.0, Firefox 6.0, Safari 5.0 or Opera 11</p>
+      <p>Developer - I might have messed something up! Try again later...</p>
     </div>
   </body>
 </html>
