--- a/2l-oll-dev.html
+++ b/2l-oll-dev.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/common.css" />
     <link rel="stylesheet" type="text/css" href="css/2l-oll.css" />
     <script type="text/javascript" src="js/lib.js" async></script>
     <script type="text/javascript" src="js/view.js" async></script>
