--- a/coll-dev.html
+++ b/coll-dev.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <link rel="stylesheet" type="text/css" href="css/coll.css" />
+    <script type="text/javascript" src="js/touchtap-event.js" async></script>
+    <script type="text/javascript" src="js/abbr-touch.js" async></script>
+    <script type="text/javascript" src="js/abbr.js" async></script>
     <script type="text/javascript" src="js/lib.js" async></script>
     <script type="text/javascript" src="js/view.js" async></script>
     <script type="text/javascript" src="js/case.js" async></script>
-    <script type="text/javascript" src="js/abbr.js" async></script>
     <script type="text/javascript" src="data/coll.js" async></script>
     <title>Loading</title>
   </head>
