--- a/2l-2gll-dev.html
+++ b/2l-2gll-dev.html
@@ -5,6 +5,7 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/common.css" />
+    <link rel="stylesheet" type="text/css" href="css/2l-2gll.css" />
     <script type="text/javascript" src="js/touchtap-event.js" async></script>
     <script type="text/javascript" src="js/abbr-touch.js" async></script>
     <script type="text/javascript" src="js/abbr.js" async></script>
