--- a/2l-2gll.html
+++ b/2l-2gll.html
@@ -5,8 +5,9 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/common-min-018.css" />
+    <link rel="stylesheet" type="text/css" href="css/2l-2gll-min-001.css" />
     <script type="text/javascript" src="js/common-min-033.js" async></script>
-    <script type="text/javascript" src="data/2l-2gll-min-006.js" async></script>
+    <script type="text/javascript" src="data/2l-2gll-min-007.js" async></script>
     <title>Loading</title>
   </head>
   <body>
