--- a/2loll.html
+++ b/2loll.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!-- saved from url=(0026)http://cubing.mikeg.me.uk/algs/2l-oll.html -->
+<!-- saved from url=(0026)http://cubing.mikeg.me.uk/algs/2loll.html -->
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/common-min-018.css" />
-    <link rel="stylesheet" type="text/css" href="css/2l-oll-min-005.css" />
+    <link rel="stylesheet" type="text/css" href="css/2loll-min-005.css" />
     <script type="text/javascript" src="js/common-min-033.js" async></script>
-    <script type="text/javascript" src="data/2l-oll-min-010.js" async></script>
+    <script type="text/javascript" src="data/2loll-min-010.js" async></script>
     <title>Loading</title>
   </head>
   <body>
