--- a/3apll.html
+++ b/3apll.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/common-min-018.css" />
     <link rel="stylesheet" type="text/css" href="css/2lpll-min-002.css" />
-    <script type="text/javascript" src="js/common-min-035.js" async></script>
+    <script type="text/javascript" src="js/common-min-036.js" async></script>
     <script type="text/javascript" src="data/3apll-min-001.js" async></script>
+	<script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-86348435-1', 'auto');
+      ga('send', 'pageview');
+    </script>
     <title>Loading</title>
   </head>
   <body>
