Add titles to HTML and defer js

--- a/2loll.html
+++ b/2loll.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/common-min-018.css" />
     <link rel="stylesheet" type="text/css" href="css/2loll-min-006.css" />
-    <script type="text/javascript" src="js/common-min-037.js" async></script>
-    <script type="text/javascript" src="data/2loll-min-012.js" async></script>
+    <script type="text/javascript" src="js/common-min-037.js" defer></script>
+    <script type="text/javascript" src="data/2loll-min-012.js" defer></script>
 	<script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -16,7 +16,7 @@
       ga('create', 'UA-86348435-1', 'auto');
       ga('send', 'pageview');
     </script>
-    <title>Loading</title>
+    <title>2LOLL</title>
   </head>
   <body>
     <div id="view">
