--- a/oll-dev.html
+++ b/oll-dev.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <link rel="stylesheet" type="text/css" href="css/oll.css" />
-    <script type="text/javascript" src="js/touchtap-event.js" async></script>
-    <script type="text/javascript" src="js/abbr-touch.js" async></script>
-    <script type="text/javascript" src="js/abbr.js" async></script>
-    <script type="text/javascript" src="js/lib.js" async></script>
-    <script type="text/javascript" src="js/view.js" async></script>
-    <script type="text/javascript" src="js/case.js" async></script>
-    <script type="text/javascript" src="data/oll.js" async></script>
-    <title>Loading</title>
+    <script type="text/javascript" src="data/oll.js" defer></script>
+    <script type="text/javascript" src="js/touchtap-event.js" defer></script>
+    <script type="text/javascript" src="js/abbr-touch.js" defer></script>
+    <script type="text/javascript" src="js/abbr.js" defer></script>
+    <script type="text/javascript" src="js/lib.js" defer></script>
+    <script type="text/javascript" src="js/view.js" defer></script>
+    <script type="text/javascript" src="js/case.js" defer></script>
+    <title>OLL</title>
   </head>
   <body>
     <div id="view">
