--- a/2apll-test.html
+++ b/2apll-test.html
@@ -5,11 +5,11 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/common.css">
-    <script type="text/javascript" src="js/lib.js" async></script>
-    <script type="text/javascript" src="js/test.js" async></script>
-    <script type="text/javascript" src="data/abbr.js" async></script>
-    <script type="text/javascript" src="data/2apll.js" async></script>
-    <title>Loading</title>
+    <script type="text/javascript" src="data/2apll.js" defer></script>
+    <script type="text/javascript" src="js/lib.js" defer></script>
+    <script type="text/javascript" src="js/test.js" defer></script>
+    <script type="text/javascript" src="data/abbr.js" defer></script>
+    <title>2APLL</title>
   </head>
   <body>
     <div id="view">
