--- a/coll-test.html
+++ b/coll-test.html
@@ -13,11 +13,7 @@
   </head>
   <body>
     <div id="view">
-      <h2>Hmmm. You may be a victim of the following:</h2>
-      <p>Internet - Poor connection speed causing resources to download slowly</p>
-      <p>Javascript - Is it enabled in your browser? Javascript is required for this page to work</p>
-      <p>Browser - You need at least IE 9, Chrome 4.0, Firefox 6.0, Safari 5.0 or Opera 11</p>
-      <p>Developer - I might have messed something up! Please try again later</p>
+      <p>Loading... please wait</p>
     </div>
   </body>
 </html>
