--- a/oll-test.html
+++ b/oll-test.html
@@ -12,7 +12,7 @@
     <title>OLL</title>
   </head>
   <body>
-    <div id="view">
+    <div id="container">
       <p>Loading... please wait</p>
     </div>
   </body>
