--- a/2apll.html
+++ b/2apll.html
@@ -3,18 +3,24 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="css/common-min-018.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="description" content="2-Algorithm Permutation of the Last Layer (2APLL)" />
+    <meta name="keywords" content="CFOP, PLL, 2APLL" />
+    <meta name="author" content="Michael George" />
+    <link rel="stylesheet" type="text/css" href="css/common-min-019.css" />
     <link rel="stylesheet" type="text/css" href="css/2lpll-min-002.css" />
     <script type="text/javascript" src="data/2apll-min-003.js" defer></script>
-    <script type="text/javascript" src="js/common-min-050.js" defer></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" defer></script>
+    <script type="text/javascript" src="js/common-min-051.js" defer></script>
     <title>2APLL</title>
   </head>
   <body>
-    <div id="view">
+    <div id="navigation"></div>
+    <div class="site-overlay"></div>
+    <div id="container">
       <p>Loading... please wait</p>
     </div>
-	<script>
+    <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
