--- a/coll-dev.html
+++ b/coll-dev.html
@@ -3,10 +3,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="description" content="Corners of the Last Layer (COLL)" />
+    <meta name="keywords" content="CFOP, COLL" />
+    <meta name="author" content="Michael George" />
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="css/pushy.css" />
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <link rel="stylesheet" type="text/css" href="css/coll.css" />
     <script type="text/javascript" src="data/coll.js" defer></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js" defer></script>
+    <script type="text/javascript" src="js/menu.js" defer></script>
+    <script type="text/javascript" src="js/pushy.js" defer></script>
     <script type="text/javascript" src="js/touchtap-event.js" defer></script>
     <script type="text/javascript" src="js/abbr-touch.js" defer></script>
     <script type="text/javascript" src="js/abbr.js" defer></script>
@@ -16,7 +24,14 @@
     <title>COLL</title>
   </head>
   <body>
-    <div id="view">
+    <!-- Off Screen Navigation Menu -->
+    <div id="navigation"></div>
+
+    <!-- Site Overlay -->
+    <div class="site-overlay"></div>
+
+    <!-- Main Content -->
+    <div id="container">
       <p>Loading... please wait</p>
     </div>
   </body>
