--- a/4aoll-dev.html
+++ b/4aoll-dev.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Michael George" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/pushy.css" />
-    <link rel="stylesheet" type="text/css" href="css/common.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/2loll.css" />
     <script type="text/javascript" src="data/4aoll.js" defer></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js" defer></script>
