Initialise menu via "window.onload", rather than relying upon script "defer"

--- a/pll-dev.html
+++ b/pll-dev.html
@@ -11,16 +11,16 @@
     <link rel="stylesheet" type="text/css" href="css/pushy.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/pll.css" />
-    <script type="text/javascript" src="data/pll.js" defer></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js" defer></script>
-    <script type="text/javascript" src="js/menu.js" defer></script>
-    <script type="text/javascript" src="js/pushy.js" defer></script>
-    <script type="text/javascript" src="js/touchtap-event.js" defer></script>
-    <script type="text/javascript" src="js/abbr-touch.js" defer></script>
-    <script type="text/javascript" src="js/abbr.js" defer></script>
-    <script type="text/javascript" src="js/lib.js" defer></script>
-    <script type="text/javascript" src="js/view.js" defer></script>
-    <script type="text/javascript" src="js/case.js" defer></script>
+    <script type="text/javascript" src="data/pll.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
+    <script type="text/javascript" src="js/menu.js"></script>
+    <script type="text/javascript" src="js/pushy.js"></script>
+    <script type="text/javascript" src="js/touchtap-event.js"></script>
+    <script type="text/javascript" src="js/abbr-touch.js"></script>
+    <script type="text/javascript" src="js/abbr.js"></script>
+    <script type="text/javascript" src="js/lib.js"></script>
+    <script type="text/javascript" src="js/view.js"></script>
+    <script type="text/javascript" src="js/case.js"></script>
     <title>PLL</title>
   </head>
   <body>
