Latest minified code. No need for "defer" now.

--- a/oll.html
+++ b/oll.html
@@ -9,9 +9,9 @@
     <meta name="author" content="Michael George" />
     <link rel="stylesheet" type="text/css" href="css/common-min-019.css" />
     <link rel="stylesheet" type="text/css" href="css/oll-min-006.css" />
-    <script type="text/javascript" src="data/oll-min-021.js" defer></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" defer></script>
-    <script type="text/javascript" src="js/common-min-051.js" defer></script>
+    <script type="text/javascript" src="data/oll-min-021.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="js/common-min-052.js"></script>
     <title>OLL</title>
   </head>
   <body>
