--- a/2lpll.html
+++ b/2lpll.html
@@ -9,9 +9,9 @@
     <meta name="author" content="Michael George" />
     <link rel="stylesheet" type="text/css" href="css/common-min-019.css" />
     <link rel="stylesheet" type="text/css" href="css/2lpll-min-002.css" />
-    <script type="text/javascript" src="data/2lpll-min-004.js" defer></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" defer></script>
-    <script type="text/javascript" src="js/common-min-051.js" defer></script>
+    <script type="text/javascript" src="data/2lpll-min-004.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="js/common-min-052.js"></script>
     <title>2LPLL</title>
   </head>
   <body>
