--- a/coll.html
+++ b/coll.html
@@ -9,9 +9,9 @@
     <meta name="author" content="Michael George" />
     <link rel="stylesheet" type="text/css" href="css/common-min-019.css" />
     <link rel="stylesheet" type="text/css" href="css/coll-min-007.css" />
-    <script type="text/javascript" src="data/coll-min-019.js" defer></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" defer></script>
-    <script type="text/javascript" src="js/common-min-051.js" defer></script>
+    <script type="text/javascript" src="data/coll-min-019.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="js/common-min-052.js"></script>
     <title>COLL</title>
   </head>
   <body>
