2SPLL: Tweaked to look better on iPad (portrait)

--- a/2spll.html
+++ b/2spll.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description" content="2-Sided Recognition - Permutation of Last Layer (PLL)" />
+    <meta name="description" content="2-Sided PLL Recognition" />
     <meta name="keywords" content="CFOP, 2LLL, PLL, 2SPLL" />
     <meta name="author" content="Michael George" />
     <link rel="stylesheet" type="text/css" href="css/common-min-021.css" />
