--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!-- saved from url=(0026)http://cubing.mikeg.me.uk/algs/2lcpeoll.html -->
+<!-- saved from url=(0026)http://cubing.mikeg.me.uk/algs/index.html -->
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description" content="2-Look Corner Permutation and Edge Orientation of the Last Layer (2LCPEOLL)" />
-    <meta name="keywords" content="CFOP, 4LLL, CPEOLL, 2LCPOLL" />
+    <meta name="description" content="Cubing Algs" />
+    <meta name="keywords" content="Cubing, Algs" />
     <meta name="author" content="Michael George" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
-    <link rel="stylesheet" type="text/css" href="css/2lcpeoll-min-001.css" />
-    <script type="text/javascript" src="data/2lcpeoll-min-009.js"></script>
+    <script type="text/javascript" src="data/index-min-001.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="js/common-min-068.js"></script>
-    <title>2LCPEOLL</title>
+    <title>Index</title>
   </head>
   <body>
     <div id="navigation"></div>
