Android: mobile-web-app-capable

--- a/2aoll.html
+++ b/2aoll.html
@@ -7,6 +7,8 @@
     <meta name="description" content="2-Algorithm Orientation of the Last Layer (2AOLL)" />
     <meta name="keywords" content="CFOP, OLL, 2AOLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <link rel="stylesheet" type="text/css" href="css/2loll-min-006.css" />
     <script type="text/javascript" src="data/2aoll-min-006.js"></script>
