--- a/2lcpeoll-dev.html
+++ b/2lcpeoll-dev.html
@@ -7,6 +7,8 @@
     <meta name="description" content="2-Look Corner Permutation and Edge Orientation of the Last Layer (2LCPEOLL)" />
     <meta name="keywords" content="CFOP, 4LLL, CPEOLL, 2LCPEOLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/pushy.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
