--- a/2lcpeoll.html
+++ b/2lcpeoll.html
@@ -7,6 +7,8 @@
     <meta name="description" content="2-Look Corner Permutation and Edge Orientation of the Last Layer (2LCPEOLL)" />
     <meta name="keywords" content="CFOP, 4LLL, CPEOLL, 2LCPOLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <link rel="stylesheet" type="text/css" href="css/2lcpeoll-min-001.css" />
     <script type="text/javascript" src="data/2lcpeoll-min-009.js"></script>
