--- a/2lell-dev.html
+++ b/2lell-dev.html
@@ -7,6 +7,8 @@
     <meta name="description" content="2-Look Edges of the Last Layer (2LELL)" />
     <meta name="keywords" content="CFCE, 4LLL, ELL, 2LELL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/pushy.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
