--- a/2lpll.html
+++ b/2lpll.html
@@ -7,6 +7,8 @@
     <meta name="description" content="2-Look Permutation of the Last Layer (2LPLL)" />
     <meta name="keywords" content="CFOP, 4LLL, PLL, 2LPLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <link rel="stylesheet" type="text/css" href="css/2lpll-min-002.css" />
     <script type="text/javascript" src="data/2lpll-min-010.js"></script>
