--- a/coll.html
+++ b/coll.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Corners of the Last Layer (COLL)" />
     <meta name="keywords" content="CFOP, COLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <link rel="stylesheet" type="text/css" href="css/coll-min-008.css" />
     <script type="text/javascript" src="data/coll-min-025.js"></script>
