--- a/oll.html
+++ b/oll.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Orientation of the Last Layer (OLL)" />
     <meta name="keywords" content="CFOP, 2LLL, OLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <link rel="stylesheet" type="text/css" href="css/oll-min-006.css" />
     <script type="text/javascript" src="data/oll-min-031.js"></script>
