--- a/2aoll-dev.html
+++ b/2aoll-dev.html
@@ -7,6 +7,8 @@
     <meta name="description" content="2-Algorithm Orientation of the Last Layer (2AOLL)" />
     <meta name="keywords" content="CFOP, OLL, 2AOLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/pushy.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
