--- a/2apll.html
+++ b/2apll.html
@@ -7,6 +7,8 @@
     <meta name="description" content="2-Algorithm Permutation of the Last Layer (2APLL)" />
     <meta name="keywords" content="CFOP, PLL, 2APLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <link rel="stylesheet" type="text/css" href="css/2lpll-min-002.css" />
     <script type="text/javascript" src="data/2apll-min-008.js"></script>
