--- a/2l2gll-dev.html
+++ b/2l2gll-dev.html
@@ -7,6 +7,8 @@
     <meta name="description" content="2-Look 2-Generator Last Layer (2L2GLL)" />
     <meta name="keywords" content="4LLL, 2GLL, 2L2GLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/pushy.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
