--- a/2l2gll.html
+++ b/2l2gll.html
@@ -7,6 +7,8 @@
     <meta name="description" content="2-Look 2-Generator Last Layer (2L2GLL)" />
     <meta name="keywords" content="4LLL, 2GLL, 2L2GLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <link rel="stylesheet" type="text/css" href="css/2l2gll-min-002.css" />
     <script type="text/javascript" src="data/2l2gll-min-016.js"></script>
