--- a/2lcll.html
+++ b/2lcll.html
@@ -7,6 +7,8 @@
     <meta name="description" content="2-Look Corners of the Last Layer (2LCLL)" />
     <meta name="keywords" content="CFCE, 4LLL, CLL, 2LCLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <link rel="stylesheet" type="text/css" href="css/2lcll-min-002.css" />
     <script type="text/javascript" src="data/2lcll-min-009.js"></script>
