--- a/2lell.html
+++ b/2lell.html
@@ -7,6 +7,8 @@
     <meta name="description" content="2-Look Edges of the Last Layer (2LELL)" />
     <meta name="keywords" content="CFCE, 4LLL, ELL, 2LELL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <link rel="stylesheet" type="text/css" href="css/2lell-min-002.css" />
     <script type="text/javascript" src="data/2lell-min-007.js"></script>
