--- a/2lllef-dev.html
+++ b/2lllef-dev.html
@@ -7,6 +7,8 @@
     <meta name="description" content="2-Look Last Layer Edges First (2LLLEF)" />
     <meta name="keywords" content="CFEC, 4LLL, LLEF, 2LLLEF" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/pushy.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
