--- a/2lllef.html
+++ b/2lllef.html
@@ -7,6 +7,8 @@
     <meta name="description" content="2-Look Last Layer Edges First (2LLLEF)" />
     <meta name="keywords" content="CFEC, 4LLL, LLEF, 2LLLEF" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <link rel="stylesheet" type="text/css" href="css/2lllef-min-001.css" />
     <script type="text/javascript" src="data/2lllef-min-008.js"></script>
