--- a/2loll.html
+++ b/2loll.html
@@ -7,6 +7,8 @@
     <meta name="description" content="2-Look Orientation of the Last Layer (2LOLL)" />
     <meta name="keywords" content="CFOP, 4LLL, OLL, 2LOLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <link rel="stylesheet" type="text/css" href="css/2loll-min-006.css" />
     <script type="text/javascript" src="data/2loll-min-018.js"></script>
