--- a/2lpll-dev.html
+++ b/2lpll-dev.html
@@ -7,6 +7,8 @@
     <meta name="description" content="2-Look Permutation of the Last Layer (2LPLL)" />
     <meta name="keywords" content="CFOP, 4LLL, PLL, 2LPLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/pushy.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
