--- a/2spll.html
+++ b/2spll.html
@@ -7,6 +7,8 @@
     <meta name="description" content="2-Sided PLL Recognition" />
     <meta name="keywords" content="CFOP, 2LLL, PLL, 2SPLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <link rel="stylesheet" type="text/css" href="css/2spll-min-006.css" />
     <script type="text/javascript" src="data/2spll-min-015.js"></script>
