--- a/4apll-dev.html
+++ b/4apll-dev.html
@@ -7,6 +7,8 @@
     <meta name="description" content="4-Algorithm Permutation of the Last Layer (4APLL)" />
     <meta name="keywords" content="CFOP, PLL, 4APLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/pushy.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
