--- a/4apll.html
+++ b/4apll.html
@@ -7,6 +7,8 @@
     <meta name="description" content="4-Algorithm Permutation of the Last Layer (4APLL)" />
     <meta name="keywords" content="CFOP, PLL, 4APLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <link rel="stylesheet" type="text/css" href="css/2lpll-min-002.css" />
     <script type="text/javascript" src="data/4apll-min-009.js"></script>
