--- a/coll-dev.html
+++ b/coll-dev.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Corners of the Last Layer (COLL)" />
     <meta name="keywords" content="CFOP, COLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/pushy.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
