--- a/l2e-dev.html
+++ b/l2e-dev.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Last Two Edges (L2E)" />
     <meta name="keywords" content="L2E" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/pushy.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
