--- a/l2e.html
+++ b/l2e.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Last Two Edges (L2E)" />
     <meta name="keywords" content="L2E" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <link rel="stylesheet" type="text/css" href="css/l2e-min-001.css" />
     <script type="text/javascript" src="data/l2e-min-008.js"></script>
