--- a/pll-dev.html
+++ b/pll-dev.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Permutation of the Last Layer (PLL)" />
     <meta name="keywords" content="CFOP, 2LLL, PLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/pushy.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
