--- a/pll.html
+++ b/pll.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Permutation of the Last Layer (PLL)" />
     <meta name="keywords" content="CFOP, 2LLL, PLL" />
     <meta name="author" content="Michael George" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <link rel="stylesheet" type="text/css" href="css/pll-min-002.css" />
     <script type="text/javascript" src="data/pll-min-021.js"></script>
