Add apple-touch-icon (180x180) + hi-res icon (192x192) to headers
Still undecided about adding 16x16 + 32x32

--- a/2ll4c.html
+++ b/2ll4c.html
@@ -9,6 +9,8 @@
     <meta name="author" content="Michael George" />
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="manifest" href="manifest.json" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <link rel="stylesheet" type="text/css" href="css/2ll4c-min-001.css" />
     <script type="text/javascript" src="data/2ll4c-min-007.js"></script>
