--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="author" content="Michael George" />
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="manifest" href="manifest.json" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
     <script type="text/javascript" src="data/index-min-002.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
