POLL: Added Pocket OLL (2x2x2)

--- a/poll.html
+++ b/poll.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!-- saved from url=(0026)http://cubing.mikeg.me.uk/algs/2loll.html -->
+<!-- saved from url=(0026)http://cubing.mikeg.me.uk/algs/poll.html -->
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description" content="2-Look Orientation of the Last Layer (2LOLL)" />
-    <meta name="keywords" content="CFOP, 4LLL, OLL, 2LOLL" />
+    <meta name="description" content="Orientation of the Last Layer (OLL)" />
+    <meta name="keywords" content="OLL" />
     <meta name="author" content="Michael George" />
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="manifest" href="manifest.json" />
     <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png" />
     <link rel="stylesheet" type="text/css" href="css/common-min-024.css" />
-    <link rel="stylesheet" type="text/css" href="css/2loll-min-006.css" />
-    <script type="text/javascript" src="data/2loll-min-018.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/poll-min-001.css" />
+    <script type="text/javascript" src="data/poll-min-001.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="js/common-min-073.js"></script>
-    <title>2LOLL</title>
+    <title>OLL</title>
   </head>
   <body>
     <div id="navigation"></div>
