--- a/poll.html
+++ b/poll.html
@@ -5,7 +5,7 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="Orientation of the Last Layer (OLL)" />
-    <meta name="keywords" content="OLL" />
+    <meta name="keywords" content="Ortega, Varasano, OLL" />
     <meta name="author" content="Michael George" />
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="manifest" href="manifest.json" />
