--- a/html/pbl-dev.html
+++ b/html/pbl-dev.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Ortega, Varasano, PBL" />
     <meta name="author" content="Michael George" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="../manifest.json" />
     <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png" />
     <link rel="stylesheet" type="text/css" href="../css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="../css/pushy.css" />
