--- a/html/2l2gll.html
+++ b/html/2l2gll.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="4LLL, 2GLL, 2L2GLL" />
     <meta name="author" content="Michael George" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="../manifest.json" />
     <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png" />
     <link rel="stylesheet" type="text/css" href="../css/common-min-025.css" />
     <link rel="stylesheet" type="text/css" href="../css/2l2gll-min-002.css" />
