--- a/html/2lllef.html
+++ b/html/2lllef.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="CFEC, 4LLL, LLEF, 2LLLEF" />
     <meta name="author" content="Michael George" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="../manifest.json" />
     <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png" />
     <link rel="stylesheet" type="text/css" href="../css/common-min-025.css" />
     <link rel="stylesheet" type="text/css" href="../css/2lllef-min-001.css" />
