--- a/html/4aoll.html
+++ b/html/4aoll.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="CFOP, OLL, 4AOLL" />
     <meta name="author" content="Michael George" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="../manifest.json" />
     <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png" />
     <link rel="stylesheet" type="text/css" href="../css/common-min-025.css" />
     <link rel="stylesheet" type="text/css" href="../css/2loll-min-006.css" />
