--- a/html/ppll-test.html
+++ b/html/ppll-test.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="../js/lib.js" defer></script>
     <script type="text/javascript" src="../js/test.js" defer></script>
     <script type="text/javascript" src="../data/abbr.js" defer></script>
-    <title>PLL</title>
+    <title>PPLL</title>
   </head>
   <body>
     <div id="container">
