--- a/html/ppll.html
+++ b/html/ppll.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="../data/ppll-min-005.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="../js/common-min-084.js"></script>
-    <title>PLL</title>
+    <title>PPLL</title>
   </head>
   <body>
     <div id="navigation"></div>
